# reptile-manager

./: CMakeLists.txt  README.md  idf_component.yml  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  bluetooth_manager.c  bluetooth_manager.h  main.c  models.h  ui_assets.c  ui_assets.h  ui_theme.h  wifi_manager.c
main/data/: database.c  database.h  gallery_manager.c  gallery_manager.h
main/ui/: ui_animals.c  ui_animals.h  ui_gallery.c  ui_gallery.h  ui_home.c  ui_home.h  ui_manager.c  ui_manager.h  ui_popups.c  ui_popups.h  ui_settings.c  ui_settings.h  ui_shared.h
